@@ -3,6 +3,7 @@ import ssl
 import warnings
 from functools import partial
 from pprint import pformat
+from urllib.parse import urlparse
 
 import click
 import requests
@@ -20,6 +21,22 @@ CONTEXT_SETTINGS = dict(help_option_names=['-h', '--help'])
 def printer(level, verbosity, color, msg):
     if verbosity > level:
         click.echo(click.style(str(msg), fg=color))
+
+
+class UrlParamType(click.ParamType):
+    def convert(self, value, param, ctx):
+        try:
+            o = urlparse(value)
+            assert o.path.endswith('/')
+        except AssertionError:
+            self.fail(f"Rancher url must ends with '/'")
+        except Exception:
+            self.fail(f"Invalid url. Should be something like 'https://rancher.example.com:9000/v3/'")
+
+        return value
+
+
+Url = UrlParamType()
 
 
 class VerbosityParamType(click.ParamType):
@@ -146,6 +163,7 @@ _global_options = [
                  help='Do not check Docker repository'),
     click.option('-b',
                  '--base-url',
+                 type=Url(),
                  envvar='RANCHER_ENDPOINT',
                  help='Rancher base url',
                  metavar='URL'),
@@ -275,8 +293,8 @@ def upgrade(ctx, target, image, key, secret,
             info(f"Found {len(json['containers'])} pod(s)")
             info(f"Existing tags are: {','.join(found)}")
         except Exception:
-            error("Unexpectd response", color=True)
-            error(json)
+            error("ERROR: Unexpectd response")
+            error(pformat(json))
             ctx.exit(1)
 
         log(f"Updating all pod(s) to {image_full_name}")
